--- a/src/pages/Sell.css
+++ b/src/pages/Sell.css
@@ -2,5 +2,5 @@
 @import "tailwindcss";
 
 .input {
-  @apply w-full p-2 border border-gray-300 rounded-lg bg-gray-50;
+  @apply w-full p-2 border border-gray-300 rounded-4xl bg-white;
 }
